css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700,400italic");
@import url("https://fonts.googleapis.com/css?family=Fjalla+One");

/* Add new styles at the bottom of this file! */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}




/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */



.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===================
    ALL: Orange Theme
   =================== */

.header-container {
    border-bottom: 20px solid #D2D8E3;
	background: url('../img/suns-gradient.jpg') top center no-repeat rgb(0,48,91);
	height: 250px;
	text-align: center;
}

.header-container img {
	max-width: 100%;
	height: auto;
	display: inline-block;
}



.footer-container,
.main aside {
    border-top: 20px solid #F37321;
    background: #00538D;
}

footer.wrapper {
	height: 65px;
}

.title {
    color: white;
	text-transform: uppercase;
	letter-spacing: .02em;
	font-size: 6em;
	margin: -.25em 0 0 0;
}

/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 15px 0;

    text-align: center;
    text-decoration: none;
    font-weight: bold;

    color: white;
    background: #00538D;
}

nav a:hover,
nav a:visited {
    color: white;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 2em;
	margin: 1em 0 -.15em 0;
}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}



/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

/* ====================
    INTERMEDIATE: Menu
   ==================== */

    nav a {
        float: left;
        width: 27%;
        margin: 0 1.7%;
        padding: 25px 2%;
        margin-bottom: 0;
    }

    nav li:first-child a {
        margin-left: 0;
    }

    nav li:last-child a {
        margin-right: 0;
    }

/* ========================
    INTERMEDIATE: IE Fixes
   ======================== */

    nav ul li {
        display: inline;
    }

    .oldie nav a {
        margin: 0 0.7%;
    }
}

@media only screen and (min-width: 768px) {

/* ====================
    WIDE: CSS3 Effects
   ==================== */

    .header-container,
    .main aside {
        -webkit-box-shadow: 0 5px 10px #aaa;
           -moz-box-shadow: 0 5px 10px #aaa;
                box-shadow: 0 5px 10px #aaa;
    }

/* ============
    WIDE: Menu
   ============ */

 

    nav {
        float: right;
        width: 38%;
    }

/* ============
    WIDE: Main
   ============ */

    .main article {
        float: left;
        width: 57%;
    }

    .main aside {
        float: right;
        width: 28%;
    }
}

@media only screen and (min-width: 1140px) {

/* ===============
    Maximal Width
   =============== */

    .wrapper {
        width: 1026px; /* 1140px - 10% for margins */
        margin: 0 auto;
    }
	

}


/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}


/* ==========================================================================
   ASSW custom styles
   ========================================================================== */

body {
    font-family: Alegreya Sans, sans-serif;
	color: rgb(0,48,91);
}

h1, h2, h3, h4 {
    font-family: Fjalla One, sans-serif;
	letter-spacing: .02em;
}

h2, h3, h4 {
	margin-bottom: 0;
}

p {
	margin: .25em 0 .5em 0;
}

.intro {
	color: rgb(115,135,169);
	font-size: 1.4em;
	line-height: 1.4;
}

li.news,
li.extra {
	font-size: .92em;
}

a {
    text-decoration: none;
    color: #F37321;
    font-weight: bold;
}

a:hover,
a:active,
a:focus {
	color: rgb(0,48,91);
	font-weight: 700;
}

img {
	float: left;
	margin: 0 1.5em .5em 0;
	max-width: 50%;
}

.wide {
    width: 100% !important;
}

.extra {
    display: none;
}

.button {
    cursor: pointer;
}




/** Aside block styles */

.main aside {
	padding: .5em 1.5em;
	margin: 0 0 1em 0;
}

.partner {
	color: rgb(224,180,113);
	font-size: 1.1em;
	margin: .25em 0;
}

ul {
	margin: 0 0 0 -1em;
}

li.ambassador {
	margin: 0;
	padding: 0;
	list-style-type: circle;
}

aside img {
    width: 100%;
    margin-bottom: 3em;
}

